--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,16 @@
-spring.application.name=Gerenciador de Projetos
+
+# database
+spring.datasource.url=jdbc:mysql://localhost:3307/gerenciador-projetos
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql= true
+spring.jpa.properties.hibernate.format_sql=true
+
+#Flyway :
+#baseline-version
+spring.flyway.baseline-on-migrate=true
+#run-migrations
+spring.flyway.enabled=true
+#class-path-to-migrations
+spring.flyway.locations=classpath:db/migration
